[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Core async and HTTP dependencies
futures-util = "0.3.31"
hyper = { version = "1.6", features = ["full"] }
hyper-rustls = "0.27"
http-body-util = "0.1"
tokio = { version = "1.45", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
bytes = "1.8"
thiserror = "2.0"
pin-project-lite = "0.2"
