[package]
name = "providers"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

