[package]
name = "providers"
version = "0.1.0"
edition = "2024"

[dependencies]
sse = { path = "../sse" }
hyper = { workspace = true }
hyper-util = { version = "0.1.14", features = ["client-legacy"] }
hyper-rustls = { workspace = true }
http-body-util = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

